fixed styling issue on tablet view where modal was breaking

--- a/src/components/newsletter-modal/newsletter-modal.styles.scss
+++ b/src/components/newsletter-modal/newsletter-modal.styles.scss
@@ -16,7 +16,7 @@
   margin: 10rem auto;
   border: 1px solid black;
   border-radius: 9px;
-  width: 90vw;
+  width: 25rem;
   padding: 0 20px;
 }
 .modal-header {
@@ -64,7 +64,7 @@
 
 @media all and (min-width: 791px) {
   .modal {
-    width: 30vw;
+    width: 25rem;
   }
   .newsletter-giveaway {
     display: block;
